--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div class="card-wrapper">
       <div class="card-image">
         <picture>
-          <source srcset="/images/image-header-desktop.jpg" media="(min-width: 1100px)">
-          <img src="/images/image-header-mobile.jpg" alt="Business meeting">
+          <source srcset="./images/image-header-desktop.jpg" media="(min-width: 1100px)">
+          <img src="./images/image-header-mobile.jpg" alt="Business meeting">
         </picture>
         
       </div>
