--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
   <div class="container">
-    <div class="card-wrapper">
+    <main class="card-wrapper">
       <div class="card-image">
         <picture>
           <source srcset="./images/image-header-desktop.jpg" media="(min-width: 1100px)">
@@ -22,9 +22,9 @@
         
       </div>
       <div class="card-text">
-        <h2 class="card-heading">
+        <h1 class="card-heading">
           Get <span class="card-highlight">insights</span> that help your business grow.
-        </h2>
+        </h1>
         <p>
           Discover the benefits of data analytics and make better decisions regarding revenue, customer 
   experience, and overall efficiency.
@@ -45,12 +45,12 @@
         </div>
       </div>
       
-    </div>
+    </main>
   
-    <div class="attribution">
+    <footer class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">PowerZ</a>.
-    </div>
+    </footer>
 
   </div>
 </body>
