--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   
     <footer class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">PowerZ</a>.
+      Coded by <a href="https://www.frontendmentor.io/profile/Pow3rZ">PowerZ</a>.
     </footer>
 
   </div>
